--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
  </head>
    
    <body>
-<form name="empleados" class="formulario" action="information.php"  method="POTS"> 
+<form name="empleados" class="formulario" action="informacion.php"  method="POST"> 
 <table class="tabla" border="1">
   <tr>
 <td>Identificacion_Empleado</td>  
